--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,20 +17,19 @@ jobs:
         with:
           node-version: '20'
       
-      - name: Install dependencies
-        run: npm install
-      
       - name: Create build directory
         run: |
           mkdir -p dist
-          touch dist/index.html
           echo "<html><head><title>SwitchON MultiAgent</title></head><body><h1>SwitchON MultiAgent Platform</h1><p>Welcome to the SwitchON MultiAgent platform!</p></body></html>" > dist/index.html
       
-      - name: Deploy to Cloudflare
-        uses: cloudflare/wrangler-action@v3
+      - name: Publish to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: pages publish dist --project-name=switchon-multiagent
+          projectName: switchon-multiagent
+          directory: dist
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+
 
 
