--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,13 +23,16 @@ jobs:
           echo "<html><head><title>SwitchON MultiAgent</title></head><body><h1>SwitchON MultiAgent Platform</h1><p>Welcome to the SwitchON MultiAgent platform!</p></body></html>" > dist/index.html
       
       - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1
+        uses: cloudflare/pages-action@v1.2.0  # Updated to v1.2.0
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           projectName: switchon-multiagent
           directory: dist
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+        env:
+          DEBUG: "true"  # Enable debug logs
+
 
 
 
