--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,36 +2,32 @@ name: Deploy SwitchON MultiAgent
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    
+
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Build project
+        run: npm run build
+
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/pages-action@v1.2.0
         with:
-          node-version: '20'
-      
-      - name: Create build directory
-        run: |
-          mkdir -p dist
-          echo "<html><head><title>SwitchON MultiAgent</title></head><body><h1>SwitchON MultiAgent Platform</h1><p>Welcome to the SwitchON MultiAgent platform!</p></body></html>" > dist/index.html
-      
-      - name: Publish to Cloudflare Pages
-        uses: cloudflare/pages-action@v1.2.0  # Updated to v1.2.0
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          apiKey: ${{ secrets.CLOUDFLARE_API_KEY }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          projectName: switchon-multiagent
-          directory: dist
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+          projectName: "switchon-multiagent"
+
         env:
-          DEBUG: "true"  # Enable debug logs
+          DEBUG: true
 
 
 
